k8s-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-webapp
  namespace: tekton-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tekton-webapp
  template:
    metadata:
      labels:
        app: tekton-webapp
    spec:
      containers:
      - name: web-container
        image: freecloud.azurecr.io/tekton-webapp:latest
        ports:
        - containerPort: 8080
