k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tekton-webapp
  namespace: tekton-webapp
spec:
  selector:
    app: tekton-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP # Reicht aus, da Traefik den Traffic übernimmt
