k8s-deployment/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tekton-webapp
  namespace: tekton-webapp

spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    # Rule on the Host
    match: Host(`tekton-webapp.azure.poetzelsberger.net`)
    # Attach a middleware
    services:
    # Target a Kubernetes Support
    - kind: Service
      name: tekton-webapp
      namespace: tekton-webapp
      # Customize the connection between Traefik and the backend
      port: 80
  tls:
    # Generate a TLS certificate using a certificate resolver
    certResolver: foo
    domains:
    - main: tekton-webapp.azure.poetzelsberger.net
